--- a/MyFirstApp/res/values/strings.xml
+++ b/MyFirstApp/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="button1_text">Submit</string>
+    <string name="title_activity_display_message">My Message</string>
+    <string name="edit_message">Edit Message</string>
 
 </resources>
